metadata/sf-prod/force-app/main/default/objects/workspan__WorkspanSetupProgress__c/workspan__WorkspanSetupProgress__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Workspan Setup Progress</label>
</CustomObject>