metadata/sf-prod/force-app/main/default/objects/workspan__WorkspanSetupProgress__c/fields/workspan__IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>workspan__IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if substep was completed</description>
    <inlineHelpText>Checked if substep was completed</inlineHelpText>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>