metadata/sf-prod/force-app/main/default/objects/workspan__WorkspanSetupProgress__c/fields/workspan__StepName__c.field-meta.xml
<CustomField>
    <fullName>workspan__StepName__c</fullName>
    <description>Unique name step name</description>
    <inlineHelpText>Unique name step name</inlineHelpText>
    <label>Step Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>