metadata/sf-prod/force-app/main/default/objects/workspan__WorkspanSetupProgress__c/fields/workspan__SubstepName__c.field-meta.xml
<CustomField>
    <fullName>workspan__SubstepName__c</fullName>
    <description>Unique Name of substep within a given step</description>
    <inlineHelpText>Unique Name of substep within a given step</inlineHelpText>
    <label>Substep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>