metadata/sf-prod/force-app/main/default/objects/workspan__WorkspanSetupProgress__c/listViews/workspan__All.listView-meta.xml
<ListView>
    <fullName>workspan__All</fullName>
    <columns>NAME</columns>
    <columns>workspan__StepName__c</columns>
    <columns>workspan__SubstepName__c</columns>
    <columns>workspan__IsCompleted__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>